--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7fba77">  <td>21/03/15 13:27:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Scroll_Downusing.scroll_down_usin_javascript_executor()[pri:0, instance:javascriptexecutor.Scroll_Downusing@7a9273a8]">scroll_down_usin_javascript_executor</td> 
-  <td>main@323326911</td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>21/04/27 10:57:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrangeHRM_SoftAssertion_Test.hubspot_Login_Negative_Test()[pri:2, instance:assertions.OrangeHRM_SoftAssertion_Test@29b5cd00]">hubspot_Login_Negative_Test</td> 
+  <td>main@1138193439</td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>21/04/27 10:56:51</td>   <td>-13436</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrangeHRM_SoftAssertion_Test.hubspot_Login_with_google_Test()[pri:0, instance:assertions.OrangeHRM_SoftAssertion_Test@29b5cd00]">hubspot_Login_with_google_Test</td> 
+  <td>main@1138193439</td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>21/04/27 10:57:01</td>   <td>-3496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;OrangeHRM_SoftAssertion_Test.setup()[pri:0, instance:assertions.OrangeHRM_SoftAssertion_Test@29b5cd00]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1138193439</td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>21/04/27 10:57:01</td>   <td>-3496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;OrangeHRM_SoftAssertion_Test.setup()[pri:0, instance:assertions.OrangeHRM_SoftAssertion_Test@29b5cd00]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1138193439</td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>21/04/27 10:57:00</td>   <td>-4191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrangeHRM_SoftAssertion_Test.hubspot_Login_with_form_Test()[pri:1, instance:assertions.OrangeHRM_SoftAssertion_Test@29b5cd00]">hubspot_Login_with_form_Test</td> 
+  <td>main@1138193439</td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>21/04/27 10:57:05</td>   <td>843</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;OrangeHRM_SoftAssertion_Test.tearDown()[pri:0, instance:assertions.OrangeHRM_SoftAssertion_Test@29b5cd00]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1138193439</td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>21/04/27 10:57:01</td>   <td>-3496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;OrangeHRM_SoftAssertion_Test.setup()[pri:0, instance:assertions.OrangeHRM_SoftAssertion_Test@29b5cd00]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1138193439</td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>21/04/27 10:57:05</td>   <td>843</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;OrangeHRM_SoftAssertion_Test.tearDown()[pri:0, instance:assertions.OrangeHRM_SoftAssertion_Test@29b5cd00]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1138193439</td>   <td></td> </tr>
+<tr bgcolor="7fba77">  <td>21/04/27 10:57:05</td>   <td>843</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;OrangeHRM_SoftAssertion_Test.tearDown()[pri:0, instance:assertions.OrangeHRM_SoftAssertion_Test@29b5cd00]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1138193439</td>   <td></td> </tr>
 </table>
