--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\alokb\AppData\Local\Temp\testng-eclipse-1707974869\testng-customsuite.xml</span>
+                    <span>C:\Users\alokb\AppData\Local\Temp\testng-eclipse-1510958692\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="javascriptexecutor.Scroll_Downusing" hash-for-method="scroll_down_usin_javascript_executor">scroll_down_usin_javascript_executor</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="robots.Robot_Test" hash-for-method="robot_class_test">robot_class_test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">javascriptexecutor.Scroll_Downusing</span>
+              <span class="class-name">robots.Robot_Test</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="scroll_down_usin_javascript_executor">
-                  </a> <!-- scroll_down_usin_javascript_executor -->
-                  <span class="method-name">scroll_down_usin_javascript_executor</span>
+                  <a name="robot_class_test">
+                  </a> <!-- robot_class_test -->
+                  <span class="method-name">robot_class_test</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\alokb\AppData\Local\Temp\testng-eclipse-1707974869\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\alokb\AppData\Local\Temp\testng-eclipse-1510958692\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +146,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;javascriptexecutor.Scroll_Downusing&quot;/&gt;
+      &lt;class name=&quot;robots.Robot_Test&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -188,14 +188,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'scroll_down_usin_javascript_executor')
-data.setCell(0, 2, 'javascriptexecutor.Scroll_Downusing')
-data.setCell(0, 3, 6040);
+data.setCell(0, 1, 'robot_class_test')
+data.setCell(0, 2, 'robots.Robot_Test')
+data.setCell(0, 3, 17326);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 17 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,9 +221,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">javascriptexecutor.Scroll_Downusing</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">robots.Robot_Test</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">scroll_down_usin_javascript_executor</span>
+                <span class="method-name">robot_class_test</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
