--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7fba77">  <td>21/03/15 13:27:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Scroll_Downusing.scroll_down_usin_javascript_executor()[pri:0, instance:javascriptexecutor.Scroll_Downusing@7a9273a8]">scroll_down_usin_javascript_executor</td> 
-  <td>main@323326911</td>   <td></td> </tr>
+<tr bgcolor="70acd6">  <td>21/05/02 15:24:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Robot_Test.robot_class_test()[pri:0, instance:robots.Robot_Test@23f3da8b]">robot_class_test</td> 
+  <td>main@2080444788</td>   <td></td> </tr>
 </table>
